# MAS-004_ESP32-PLC-Bridge

./: README.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  SUPPORT_CHANGELOG.md  SUPPORT_RUNBOOK.md
mas004_esp32_plc_bridge/: __init__.py  __main__.py  client.py  config.py  service.py
scripts/: config.example.json  default_config.json  install.sh  run.sh
systemd/: mas004-esp32-plc-bridge.service
