[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAS-004_ESP32-PLC-Bridge"
version = "0.2.0"
description = "ESP32 PLC line protocol bridge client and service for MAS-004"
# Runtime minimum. For training and local development, the team standard is Python 3.13.x.
requires-python = ">=3.9"
dependencies = [
  "ping3>=4.0.0",
]

[project.scripts]
mas004-esp32-bridge = "mas004_esp32_plc_bridge.service:main"

[tool.setuptools]
packages = ["mas004_esp32_plc_bridge"]
